Release 2.9.2
=============

Bugs fixed
----------

- Allow floats in figure sizes for R magic (Pull request #63)


Release 2.9.1
=============

Changes
-------

- Fixing issue #432 (see Section Bugs fixed below) involved removed the method
  `__reduce__` previously provided for all rpy2 objects representing R objects.

Bugs fixed
----------

- An error when installing with an unsupported R version was fixed (issue #420).

- The docstring for `rinterface.endr()` was improperly stating that the function was not taking
  any argument (issue #423).

- Target version of dplyr and tidyr are now 0.7.4 and 0.7.2 respectively. 

- Fixed memory leak when pickling objects (issue #432). Fixing the leak caused a
  slight change in the API (see Section Changes above).

- Conversion to :mod:`pandas` now handling R ordered factor (issue #398).

- :mod:`jinja2` was not listed as a dependency (issue #437).


Release 2.9.0
=============

New features
------------

- New module :mod:`rpy2.situation` to extract and report informations
  about the environment, such as where is the R HOME, what is the
  version of R, what is the version of R rpy2 was built with, etc...
  The module is also designed to be run directly and provide diagnostics:
  `python -m rpy2.situation`.

- :meth:`Environment.values`, :meth:`Environment.pop`,
  :meth:`Environment.popitems`, :meth:`Environment.clear`
  to match :meth:`dict.values`,
  :meth:`dict.pop`, :meth:`dict.popitems`, :meth:`dict.clear`.

- :class:`VectorOperationsDelegator` now has a method `__matmul__` to implement
  Python's matrix multiplication operator (PEP-0645).

- A rule to convert R POSIXct vectors to pandas Timestamp vectors was added (issue #418).

- method :meth:`_repr_html_` for R vectors to display HTML in jupyter.


Changes
-------

- Starting several times the singleton :class:`EventProcessor` longer results
  in a :class:`RuntimeError`. This is now only a warning, addressing
  issue #182.
